--- a/index.html
+++ b/index.html
@@ -58,13 +58,13 @@
             discussion on point can be better accomplished.  As a result, audiences (stakeholders, leads and functional 
             resources) gain faster orientation, clarification, and next steps direction.  </p>
             
-        <p>Kolten has created and published thought leadership on many enterprise change management topics.          
-        </p>
-        <a href="https://www.linkedin.com/newsletters/6922906891119468544/">Kolten's Linkedin Articles</a>
-
-
-        
-
+        <p>Kolten has created and published thought leadership on many enterprise change management topics, see 
+            <a href="https://www.linkedin.com/newsletters/6922906891119468544/">Kolten's Linkedin Articles,</a></p>
+        <br >
 
 </body>
 </html>
+<footer>
+    <hr
+    <p>© 2023 Kolten Kowalsky</p>
+</footer>
