--- a/index.html
+++ b/index.html
@@ -58,14 +58,16 @@
             <p> The last step is fitting all the puzzle pieces 
             into a presentation spelling out what it means, drawing upon written and visual cues to depict key messaging, tying 
             together facts, figures, and topics.  One of the biggest advantages of having good visual references incorporated into written and verbal explanations is
-            navigating complex and technical conversations with diverse resources.  </p>
-            <p class="bold"> Walk-me-through plans and keeping 
-            discussions on point can be better accomplished. As a result, audiences (stakeholders, leads and functional 
-            resources) gain faster orientation, clarification, and next steps direction. </p> 
+            navigating complex and technical conversations with diverse resources.  
+            Walk-me-through plans and keeping discussions on point can be better accomplished. </p>
             
+            <p class="bold">As a result, audiences (stakeholders, leads and functional 
+            resources) gain faster orientation, clarification, and next steps direction. </p> 
+        <br>
+        <br>    
         <p>Kolten has created and published thought leadership on many enterprise change management topics, see 
             <a href="https://www.linkedin.com/newsletters/6922906891119468544/">Kolten's Linkedin Articles</a> to see a few examples.</p>
-        <br >
+        <br>
         <hr
         <br>
         <p class="special"> © 2023 Kolten Kowalsky</p>
